--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Outfit:wght@100..900&family=Young+Serif&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="/styles.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <div class="recipe-container">
